add show text account status